Update التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md

--- a/التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md
+++ b/التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md
@@ -1,7 +1,15 @@
 Create Movie rating software  
 
-Movie Class :
-ID, name , genre  , rating , duration , launchDate
+Movie  :
+
+- ID : It must be String and by default use uuid,
+- name : must be String and by Unique,
+- genre : must be String,
+- rating : It must be a number ,
+- duration : It must be a number  ,
+- launchDate : must be String,,
+
+
 
 
 
