Update التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md

--- a/التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md
+++ b/التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md
@@ -7,7 +7,7 @@ Movie  :
 - genre : must be String,
 - rating : It must be a number ,
 - duration : It must be a number  ,
-- launchDate : must be String,,
+- launchDate : must be Date,,
 
 
 
