Update التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md

--- a/التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md
+++ b/التمرين اليوم الثاني الاسبوع الاسبوع الثاني.md
@@ -7,7 +7,7 @@ Movie  :
 - genre : must be String,
 - rating : It must be a number ,
 - duration : It must be a number  ,
-- launchDate : must be Date,
+- createdat : must be Date,
 
 
 
@@ -40,15 +40,14 @@ duration :
 3. Has to be represented in minutes
 4. I must be more than 60
 
-launchDate :
-1. Cannot be null
+createdat :
+1. Default data
 2. Has to be date
 
 
 - Use Prisma
 
 - Use Zod
-
 
 
 Endpoints :
@@ -60,3 +59,9 @@ Add new Movie
 Update Movie
 
 Delete Movie
+
+Get movie by name
+
+Get all movies with specific genre
+
+Get all movies which have more than rating number
